Changelog for Miosix np embedded OS

- Added loop mount example.
- Fixed a bug in umount().
- Reworked logging.h to decrease code size.
- Moving from mallinfo() to _mallinfo_r() in getCurrentFreeHeap() to avoid
  accidentally bringing in iprintf(), which increases code size.
- Added RCC_SYNC() macro to all stm32 BSPs to workaround an errata in the
  stm32f42x requiring additional cycles to enable clock gating. From now on
  it is suggested to add an RCC_SYNC() after every access to the RCC to
  enable clock gating an all stm32 ports.
- Added SDRAM initialization code for stm32f429 board, and SDRAM linker
  scripts. The new default is to put .data/.bss/stack and heap in the SDRAM,
  and to leave the upper 2MB of it for the LCD.
- Cleaned up code completion configuration for Netbeans. Now the IDE
  automatically detects the source files that belong to the project by looking 
  at the debug symbols in the produced elf file. 
- Added memory barrier to saveContext() to prevent a race condition found in
  the new stm32f429 board.
- Now Makefile.inc has no predefined board. This has been done in order to
  avoid mistakenly compiling for the wrong board.
- Fixed bug in testsuite: it failed compiling with exceptions disabled due
  to RTTI dependence.
- Fixed a bug in Thread::create() causing a crash when the heap is full.
- Changed PROGRAM_CMDLINE for stm32vldiscovery from vsprog to stm32flash
- Unified the CMSIS directories in the various subdirectories of arch into
  one CMSIS, in order to reduce the amount of code duplication and to avoid
  having to deal with subtle incompatibilities between different CMSIS versions
- Added support for stm32f2xx and specifically the new stm32f4discovery with
  an LCD display.
- After so many changes and improvements, officially releasing Miosix 2.0beta1
v2.0beta1
- Upgraded compiler build scripts to build a redistributable Miosix Toolchain
  for both Linux and Windows